# zktls-verifier

./: Cargo.toml  README.md
.github/workflows/: build.yml
protos/: Cargo.toml  buf.gen.yaml
protos/src/: lib.rs
protos/src/api/: mod.rs
verifier/: Cargo.toml
verifier/src/: error.rs  lib.rs
verifier/tests/: mod.rs  verify_tests.rs
verifier/tests/files/: proof_data.data  proof_data.json
