[workspace]
members = [
    "protos",
    "verifier"
]
exclude = []
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.97" }
http = { version = "0.2.9" }
prost = { version = "0.12" }
pbjson = { version = "0.5.1" }
pbjson-types = { version = "0.5.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = { version = "2.0.12" }
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
typed-builder = { version = "0.20.0" }
idna = { version = "1.0.3" }
validator = { version = "0.20.0" }
rcgen = { version = "0.11.1" }
tempfile = { version = "3.7.1" }
tokio = { version = "1.44.0", features = ["macros", "rt", "test-util"] }
ethers = { version = "2.0" }
hex = { version = "0.4" }
log = { version = "0.4" }
rustc-hex = { version = "2.1.0" }

